[2017-09-23 18:53:08 +0200]  Now bash beautification                                                    karasu      {390ef2da}
[2017-09-23 18:50:13 +0200]  Beautification                                                             karasu      {02d89638}
[2017-09-23 13:23:58 +0200]  beautify packages.xml                                                      karasu      {2b2b430c}
[2017-09-23 13:20:05 +0200]  Proper identation in ui files                                              karasu      {f69aabb3}
[2017-09-23 12:34:34 +0200]  Roll back last commit,  but use long useradd parameters for readabi..      karasu      {9f0318c6}
[2017-09-23 12:16:06 +0200]  Use -U in useradd (Create a group with the same name as the user, a..      karasu      {07d3a3f3}
[2017-09-23 12:03:43 +0200]  And beautification is finished                                             karasu      {f1005535}
[2017-09-23 12:00:08 +0200]  beautification                                                             karasu      {0091c2fd}
[2017-09-23 11:58:46 +0200]  Beautification                                                             karasu      {56eba4b1}
[2017-09-23 11:57:36 +0200]  Beautification                                                             karasu      {b0fbc582}
[2017-09-23 11:53:13 +0200]  More beautification                                                        karasu      {0ef68cdb}
[2017-09-23 11:52:02 +0200]  More beautification                                                        karasu      {12ed9d8d}
[2017-09-23 11:50:07 +0200]  More beautification                                                        karasu      {9f796f80}
[2017-09-23 11:46:23 +0200]  Merge branch '0.14.x' of github.com:Antergos/Cnchi into 0.14.x             karasu      {896c8b45}
[2017-09-23 11:45:45 +0200]  Beautify code                                                              karasu      {0a046d50}