@@ -1,3 +1,5 @@
+[2017-09-26 19:01:07 +0200]  Updatep packages.xml                                                       karasu      {845e05ef}
+[2017-09-25 20:41:24 +0200]  Add antergos-welcome to packages.xml                                       karasu      {aa956037}
 [2017-09-23 18:53:08 +0200]  Now bash beautification                                                    karasu      {390ef2da}
 [2017-09-23 18:50:13 +0200]  Beautification                                                             karasu      {02d89638}
 [2017-09-23 13:23:58 +0200]  beautify packages.xml                                                      karasu      {2b2b430c}
